--- a/apps/base/home-zwavejsui/deploy/config/settings.secret.json
+++ b/apps/base/home-zwavejsui/deploy/config/settings.secret.json
@@ -9,8 +9,8 @@
         "retain": true,
         "clean": true,
         "auth": true,
-        "username": "user",
-        "password": "password",
+        "username": "",
+        "password": "",
         "_ca": "",
         "ca": "",
         "_cert": "",
@@ -33,10 +33,12 @@
         "values": []
     },
     "zwave": {
-        "port": "{{ zwavejsui.serial_device }}",
+        "port": "tcp://1.2.3.4:3333",
         "commandsTimeout": 30,
-        "networkKey": "{{ zwavejsui.zwave_network_key }}",
-        {# Disable soft reset to avoid issues with remote adapters (https://github.com/zwave-js/zwavejsui/issues/2086 & https://github.com/zwave-js/node-zwave-js/issues/3777) #}
+        "securityKeys": {
+            "S0_Legacy": "changemechangemechangemechangeme"
+        },
+        "deviceConfigPriorityDir": "/usr/src/app/store/config",
         "enableSoftReset": false,
         "logLevel": "warn",
         "logToFile": false,
