--- a/apps/base/home-zwavejsui/deploy/networkPolicy.yaml
+++ b/apps/base/home-zwavejsui/deploy/networkPolicy.yaml
@@ -2,16 +2,13 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-zwavejsui
-  namespace: {{ zwavejsui.namespace }}
-  labels:
-    {{ zwavejsui.labels_def | to_nice_yaml() | indent(4) }}
-    {{ zwavejsui.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ zwavejsui.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: zwavejsui
+      app.kubernetes.io/component: zwavejsui
 
   ingress:
     # Allow http from the ingress controller
@@ -20,10 +17,10 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
           podSelector:
             matchLabels:
-              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
 
     # Allow ws from HomeAssistant
     - ports:
