--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/tasks/main.yml
@@ -30,6 +30,13 @@
   loop_control:
     label: "{{ item.secret_name }}"
 
+- name: Deploy custom crowdsec pki TLS secrets
+  kubernetes.core.k8s:
+    definition: "{{ lookup('template', 'crowdsec-tls-secrets.yaml.j2') }}"
+    state: present
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
+
 - name: Deploy SOPS secret
   kubernetes.core.k8s:
     definition: "{{ lookup('template', 'sops-secret.yaml.j2') }}"
