--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -28,3 +28,4 @@
     - { role: home-zwavejsui,                tags: kubernetes-app-home-zwavejsui,                when: zwavejsui_enabled | bool }
     - { role: infra-blocky,                  tags: kubernetes-app-infra-blocky,                  when: blocky_enabled | bool }
     - { role: infra-crowdsec,                tags: kubernetes-app-infra-crowdsec,                when: crowdsec_enabled | bool }
+    - { role: infra-docker-registry-ui,      tags: kubernetes-app-infra-docker-registry-ui,      when: docker_registry_ui_enabled | bool }
