--- a/apps/base/infra-docker-registry-ui/deploy/ingress.yaml
+++ b/apps/base/infra-docker-registry-ui/deploy/ingress.yaml
@@ -2,10 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: docker-registry-ui
-  namespace: {{ docker_registry_ui.namespace }}
-  labels:
-    {{ docker_registry_ui.labels_def | to_nice_yaml() | indent(4) }}
-    {{ docker_registry_ui.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Cluster Management
@@ -17,13 +13,13 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-      - docker-registry-ui.infra.intra.{{ web_base_domain }}
+      - docker-registry-ui.infra.intra.web_domain_name
       secretName: ingress-tls
   rules:
-  - host: docker-registry-ui.infra.intra.{{ web_base_domain }}
+  - host: docker-registry-ui.infra.intra.web_domain_name
     http:
       paths:
-      - path: {{ '/' if docker_registry_ui.context_root == '' else docker_registry_ui.context_root }}
+      - path: /
         pathType: Prefix
         backend:
           service:
