--- a/apps/base/infra-docker-registry-ui/deploy/networkPolicy.yaml
+++ b/apps/base/infra-docker-registry-ui/deploy/networkPolicy.yaml
@@ -2,16 +2,13 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-docker-registry-ui
-  namespace: {{ docker_registry_ui.namespace }}
-  labels:
-    {{ docker_registry_ui.labels_def | to_nice_yaml() | indent(4) }}
-    {{ docker_registry_ui.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ docker_registry_ui.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: docker-registry-ui
+      app.kubernetes.io/component: docker-registry-ui
 
   ingress:
     - ports:
@@ -19,10 +16,10 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
           podSelector:
             matchLabels:
-              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
         - namespaceSelector:
             matchLabels:
               app.kubernetes.io/name: infra-docker-registry
