Migrate infra-gandi-livedns to kustomize

--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -29,3 +29,4 @@
     - { role: infra-blocky,                  tags: kubernetes-app-infra-blocky,                  when: blocky_enabled | bool }
     - { role: infra-crowdsec,                tags: kubernetes-app-infra-crowdsec,                when: crowdsec_enabled | bool }
     - { role: infra-docker-registry-ui,      tags: kubernetes-app-infra-docker-registry-ui,      when: docker_registry_ui_enabled | bool }
+    - { role: infra-gandi-livedns,           tags: kubernetes-app-infra-gandi-livedns,           when: gandi_livedns_enabled | bool }
