--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -31,3 +31,4 @@
     - { role: infra-docker-registry-ui,      tags: kubernetes-app-infra-docker-registry-ui,      when: docker_registry_ui_enabled | bool }
     - { role: infra-gandi-livedns,           tags: kubernetes-app-infra-gandi-livedns,           when: gandi_livedns_enabled | bool }
     - { role: cluster-intel-gpu-plugin,      tags: kubernetes-app-cluster-intel-gpu-plugin,      when: intel_gpu_plugin_enabled | bool }
+    - { role: infra-kubernetes-dashboard,    tags: kubernetes-app-infra-kubernetes-dashboard,    when: kubernetes_dashboard_enabled | bool }
