--- a/apps/base/infra-kubernetes-dashboard/deploy/clusterRoleBinding.yaml
+++ b/apps/base/infra-kubernetes-dashboard/deploy/clusterRoleBinding.yaml
@@ -9,4 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: dashboard-admin-user
-  namespace: {{ kubernetes_dashboard.namespace }}
+  namespace: infra-kubernetes-dashboard
