--- a/apps/base/infra-kubernetes-metrics-server/deploy/kubernetes-metrics-server/auth-delegator.yaml
+++ b/apps/base/infra-kubernetes-metrics-server/deploy/kubernetes-metrics-server/auth-delegator.yaml
@@ -3,8 +3,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: metrics-server:system:auth-delegator
-  labels:
-    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -12,4 +10,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: metrics-server
-  namespace: {{ kubernetes_metrics_server.namespace }}
+  namespace: infra-kubernetes-metrics-server
