--- a/apps/base/infra-kubernetes-metrics-server/deploy/kubernetes-metrics-server/metrics-apiservice.yaml
+++ b/apps/base/infra-kubernetes-metrics-server/deploy/kubernetes-metrics-server/metrics-apiservice.yaml
@@ -3,14 +3,12 @@ apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
   name: v1beta1.metrics.k8s.io
-  labels:
-    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
 spec:
   group: metrics.k8s.io
   groupPriorityMinimum: 100
   insecureSkipTLSVerify: true
   service:
     name: metrics-server
-    namespace: {{ kubernetes_metrics_server.namespace }}
+    namespace: infra-kubernetes-metrics-server
   version: v1beta1
   versionPriority: 100
