--- a/apps/base/infra-mailhog/deploy/ingress.yaml
+++ b/apps/base/infra-mailhog/deploy/ingress.yaml
@@ -2,10 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: mailhog
-  namespace: {{ mailhog.namespace }}
-  labels:
-    {{ mailhog.labels_def | to_nice_yaml() | indent(4) }}
-    {{ mailhog.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Cluster Management
@@ -17,13 +13,13 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-      - mailhog.infra.intra.{{ web_base_domain }}
+      - mailhog.infra.intra.web_domain_name
       secretName: ingress-tls
   rules:
-  - host: mailhog.infra.intra.{{ web_base_domain }}
+  - host: mailhog.infra.intra.web_domain_name
     http:
       paths:
-      - path: {{ '/' if mailhog.context_root == '' else mailhog.context_root }}
+      - path: /
         pathType: Prefix
         backend:
           service:
