--- a/apps/base/infra-mailhog/deploy/networkPolicy.yaml
+++ b/apps/base/infra-mailhog/deploy/networkPolicy.yaml
@@ -2,16 +2,13 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-mailhog
-  namespace: {{ mailhog.namespace }}
-  labels:
-    {{ mailhog.labels_def | to_nice_yaml() | indent(4) }}
-    {{ mailhog.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ mailhog.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: mailhog
+      app.kubernetes.io/component: mailhog
 
   ingress:
     # Allow http from the ingress controller
@@ -20,10 +17,10 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
           podSelector:
             matchLabels:
-              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
 
     # Allow smtp from zonemta
     - ports:
@@ -31,7 +28,8 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              name: {{ zonemta.namespace }}
+              app.kubernetes.io/name: infra-zonemta
           podSelector:
             matchLabels:
-              {{ zonemta.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: zonemta
+              app.kubernetes.io/component: server
