--- a/ansible/install_applications/vars/monitoring-prometheus-operator.yml
+++ b/ansible/install_applications/vars/monitoring-prometheus-operator.yml
@@ -131,9 +131,9 @@ alertmanager:
 
   ntfy_alertmanager:
     enabled: "{{ ntfy_alertmanager.alertmanager.enabled | default(False) }}"
-    url: "{{ ntfy_alertmanager.webhook.url }}"
-    username: "{{ ntfy_alertmanager.webhook.username }}"
-    password: "{{ ntfy_alertmanager.webhook.password }}"
+    url: "http://ntfy-alertmanager.{{ _ntfy_var_loader.namespace }}.svc.cluster.local:8080"
+    username: "{{ ntfy_alertmanager_webhook_username | default('user') }}"
+    password: "{{ ntfy_alertmanager_webhook_password | default('password') }}"
 
   context_root: "{{ alertmanager_context_root | default('') }}"
   default_receiver: 
