--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -34,3 +34,4 @@
     - { role: infra-kubernetes-metrics-server,  tags: kubernetes-app-infra-kubernetes-metrics-server,  when: kubernetes_metrics_server_enabled | bool }
     - { role: infra-kubernetes-dashboard,       tags: kubernetes-app-infra-kubernetes-dashboard,       when: kubernetes_dashboard_enabled | bool }
     - { role: infra-mailhog,                    tags: kubernetes-app-infra-mailhog,                    when: mailhog_enabled | bool }
+    - { role: infra-ntfy,                       tags: kubernetes-app-infra-ntfy,                       when: ntfy_enabled | bool }
