Migrate infra-unifi to kustomize

--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -36,3 +36,4 @@
     - { role: infra-kubernetes-dashboard,       tags: kubernetes-app-infra-kubernetes-dashboard,       when: kubernetes_dashboard_enabled | bool }
     - { role: infra-mailhog,                    tags: kubernetes-app-infra-mailhog,                    when: mailhog_enabled | bool }
     - { role: infra-ntfy,                       tags: kubernetes-app-infra-ntfy,                       when: ntfy_enabled | bool }
+    - { role: infra-unifi,                      tags: kubernetes-app-infra-unifi,                      when: unifi_enabled | bool }
