--- a/apps/base/infra-unifi/deploy/ingress.yaml
+++ b/apps/base/infra-unifi/deploy/ingress.yaml
@@ -2,10 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: unifi
-  namespace: {{ unifi.namespace }}
-  labels:
-    {{ unifi.labels_def | to_nice_yaml() | indent(4) }}
-    {{ unifi.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     gethomepage.dev/enabled: "true"
@@ -18,10 +14,10 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-      - unifi.infra.intra.{{ web_base_domain }}
+      - unifi.infra.intra.web_domain_name
       secretName: ingress-tls
   rules:
-  - host: unifi.infra.intra.{{ web_base_domain }}
+  - host: unifi.infra.intra.web_domain_name
     http:
       paths:
       - path: /
