--- a/apps/base/infra-unifi/deploy/networkPolicy.yaml
+++ b/apps/base/infra-unifi/deploy/networkPolicy.yaml
@@ -2,41 +2,37 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-unifi
-  namespace: {{ unifi.namespace }}
-  labels:
-    {{ unifi.labels_def | to_nice_yaml() | indent(4) }}
-    {{ unifi.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ unifi.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: unifi
+      app.kubernetes.io/component: unifi
 
   ingress:
     # Allow http from the ingress controller
     - ports:
-        - port: https
+        - port: http
       from:
         - namespaceSelector:
             matchLabels:
-              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
           podSelector:
             matchLabels:
-              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
 
-{% if homepage.config.unifi.enabled %}
     # Allow http from the homepage (to enable the widget)
     - ports:
         - port: https
       from:
         - namespaceSelector:
             matchLabels:
-              name: {{ homepage.namespace }}
+              app.kubernetes.io/name: tool-homepage
           podSelector:
             matchLabels:
-              {{ homepage.labels_def | to_nice_yaml() | indent(14) }}
-{% endif %}
+              app.kubernetes.io/name: homepage
+              app.kubernetes.io/component: homepage
 
     # Allow private ports from everywhere
     - ports:
