--- a/apps/base/infra-unifi/deploy/statefulSet.yaml
+++ b/apps/base/infra-unifi/deploy/statefulSet.yaml
@@ -2,25 +2,22 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: unifi
-  namespace: {{ unifi.namespace }}
-  labels:
-    {{ unifi.labels_def | to_nice_yaml() | indent(4) }}
-    {{ unifi.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   selector:
     matchLabels:
-      {{ unifi.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: unifi
+      app.kubernetes.io/component: unifi
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        {{ unifi.labels_def | to_nice_yaml() | indent(8) }}
-        {{ unifi.labels_desc | to_nice_yaml() | indent(8) }}
+        app.kubernetes.io/name: unifi
+        app.kubernetes.io/component: unifi
     spec:
       initContainers:
       - name: create-folders
-        image: "{{ busybox.private_image | image_full_name }}"
+        image: "registry.lan/unifi:v7.3.83"
         imagePullPolicy: Always
         command:
           - "sh"
@@ -30,10 +27,10 @@ spec:
             mkdir -p /unifi/log
             chown -R 999:999 /unifi/*
         volumeMounts:
-        - name: unifi-pv-claim
+        - name: unifi-data
           mountPath: /unifi
       - name: inject-certificates
-        image: "{{ unifi.private_image | image_full_name }}"
+        image: "registry.lan/unifi:v7.3.83"
         command:
           - "sh"
           - "-c"
@@ -51,7 +48,7 @@ spec:
           subPath: ca.crt
       containers:
       - name: unifi
-        image: "{{ unifi.private_image | image_full_name }}"
+        image: "registry.lan/unifi:v7.3.83"
         imagePullPolicy: Always        
         ports:
         # https://help.ubnt.com/hc/en-us/articles/218506997-UniFi-Ports-Used
@@ -80,7 +77,7 @@ spec:
         - name: RUNAS_UID0
           value: "false"
         - name: JVM_MAX_HEAP_SIZE
-          value: "{{ unifi.max_java_memory }}"
+          value: "512M"
         readinessProbe:
           httpGet:
             scheme: HTTPS
@@ -94,18 +91,18 @@ spec:
           readOnlyRootFilesystem: true
         resources:
           requests:
-            cpu: "{{ unifi.container.requests_cpu }}"
-            memory: "{{ unifi.container.requests_memory }}"
+            cpu: 25m
+            memory: 1Gi
           limits:
-            cpu: "{{ unifi.container.limits_cpu }}"
-            memory: "{{ unifi.container.limits_memory }}"
+            cpu: 250m
+            memory: 1Gi
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
           readOnly: true
         - name: keystore-volume
           mountPath: /etc/ssl/certs/java
-        - name: unifi-pv-claim
+        - name: unifi-data
           mountPath: /unifi
         - name: tmp-volume
           mountPath: /tmp
@@ -115,6 +112,9 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: unifi-data
+        persistentVolumeClaim:
+          claimName: unifi-data
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
@@ -128,12 +128,3 @@ spec:
       - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
-  volumeClaimTemplates:
-  - metadata:
-      name: unifi-pv-claim
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ kubernetes_longhorn_high_durability_storage_class_name }}
-      resources:
-        requests:
-          storage: {{ unifi.container.storage.data }}
