Clean networkpolicies namespaceSelector

--- a/apps/base/auth-lemonldap/deploy/networkPolicies.yaml
+++ b/apps/base/auth-lemonldap/deploy/networkPolicies.yaml
@@ -17,7 +17,7 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+              kubernetes.io/metadata.name: ingress-nginx
           podSelector:
             matchLabels:
               app.kubernetes.io/name: ingress-nginx
