--- a/apps/base/infra-zonemta/deploy/zonemta/networkPolicy.yaml
+++ b/apps/base/infra-zonemta/deploy/zonemta/networkPolicy.yaml
@@ -21,7 +21,7 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              name: monitoring-prometheus
+              kubernetes.io/metadata.name: monitoring-prometheus
           podSelector:
             matchLabels:
               app.kubernetes.io/component: prometheus
