--- a/apps/base/dev-argo-workflows/deploy/base/workflow-controller/workflow-controller-networkPolicy.yaml
+++ b/apps/base/dev-argo-workflows/deploy/base/workflow-controller/workflow-controller-networkPolicy.yaml
@@ -16,7 +16,7 @@ spec:
         # Allow from prometheus
         - namespaceSelector:
             matchLabels:
-              name: monitoring-prometheus
+              kubernetes.io/metadata.name: monitoring-prometheus
           podSelector:
             matchLabels:
               app.kubernetes.io/component: prometheus
