--- a/apps/base/dev-minio/deploy/networkpolicy.yaml
+++ b/apps/base/dev-minio/deploy/networkpolicy.yaml
@@ -29,7 +29,7 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+              kubernetes.io/metadata.name: ingress-nginx
           podSelector:
             matchLabels:
               app.kubernetes.io/name: ingress-nginx
