--- a/apps/base/home-homeassistant/deploy/homeassistant/networkPolicy.yaml
+++ b/apps/base/home-homeassistant/deploy/homeassistant/networkPolicy.yaml
@@ -17,7 +17,7 @@ spec:
         # Allow from the ingress controller
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+              kubernetes.io/metadata.name: ingress-nginx
           podSelector:
             matchLabels:
               app.kubernetes.io/name: ingress-nginx
@@ -25,7 +25,7 @@ spec:
         # Allow from nodered
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: home-nodered
+              kubernetes.io/metadata.name: home-nodered
           podSelector:
             matchLabels:
               app.kubernetes.io/name: nodered
