--- a/apps/base/infra-crowdsec/deploy/agent/networkPolicy.yaml
+++ b/apps/base/infra-crowdsec/deploy/agent/networkPolicy.yaml
@@ -17,7 +17,7 @@ spec:
         # Allow from prometheus
         - namespaceSelector:
             matchLabels:
-              name: monitoring-prometheus
+              kubernetes.io/metadata.name: monitoring-prometheus
           podSelector:
             matchLabels:
               app.kubernetes.io/component: prometheus
