--- a/apps/base/infra-crowdsec/deploy/lapi/networkPolicy.yaml
+++ b/apps/base/infra-crowdsec/deploy/lapi/networkPolicy.yaml
@@ -30,7 +30,7 @@ spec:
         # Allow from prometheus
         - namespaceSelector:
             matchLabels:
-              name: monitoring-prometheus
+              kubernetes.io/metadata.name: monitoring-prometheus
           podSelector:
             matchLabels:
               app.kubernetes.io/component: prometheus
