--- a/apps/base/infra-ntfy/deploy/ntfy-alertmanager/networkPolicy.yaml
+++ b/apps/base/infra-ntfy/deploy/ntfy-alertmanager/networkPolicy.yaml
@@ -17,7 +17,7 @@ spec:
         # Allow from alertmanager
         - namespaceSelector:
             matchLabels:
-              name: monitoring-prometheus
+              kubernetes.io/metadata.name: monitoring-prometheus
           podSelector:
             matchLabels:
               app.kubernetes.io/name: alertmanager
