--- a/apps/base/infra-ntfy/deploy/ntfy/networkPolicy.yaml
+++ b/apps/base/infra-ntfy/deploy/ntfy/networkPolicy.yaml
@@ -17,7 +17,7 @@ spec:
         # Allow from the ingress controller
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+              kubernetes.io/metadata.name: ingress-nginx
           podSelector:
             matchLabels:
               app.kubernetes.io/name: ingress-nginx
@@ -31,7 +31,7 @@ spec:
         # Allow from homeassistant
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: home-homeassistant
+              kubernetes.io/metadata.name: home-homeassistant
           podSelector:
             matchLabels:
               app.kubernetes.io/name: homeassistant
