--- a/apps/base/infra-unifi/deploy/networkPolicy.yaml
+++ b/apps/base/infra-unifi/deploy/networkPolicy.yaml
@@ -17,7 +17,7 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+              kubernetes.io/metadata.name: ingress-nginx
           podSelector:
             matchLabels:
               app.kubernetes.io/name: ingress-nginx
@@ -28,7 +28,7 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: tool-homepage
+              kubernetes.io/metadata.name: tool-homepage
           podSelector:
             matchLabels:
               app.kubernetes.io/name: homepage
